tests/outref/TCS07.ref

SELECT case when id=1 then 'id_is_1' when id=2 then 'id_is_2' else 1 end as caseid FROM names;
[ERROR] PATH:LINENUM DATE TIME : ERR_CASE_BRANCH_TYPE_MISMATCH : CASE branch type mismatch: left VARCHAR, right INTEGER
Error with syntax near (line 1, column 36):

SELECT case when id=1 then 'id_is_1' when id=2 then 'id_is_2' else 1 end as caseid FROM names;
                                   ^
Error with syntax near (line 1, column 68):

SELECT case when id=1 then 'id_is_1' when id=2 then 'id_is_2' else 1 end as caseid FROM names;
                                                                   ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT case when id=1 then 'id_is_1' when id=2 then 'id_is_2' else 1 end as caseid FROM names;

